@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2019 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2020 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,13 +17,17 @@
 package io.helidon.webserver;
 
 import java.net.InetAddress;
+import java.net.UnknownHostException;
 import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Supplier;
 
 import javax.net.ssl.SSLContext;
+
+import io.helidon.config.ConfigException;
 
 /**
  * The SocketConfiguration configures a port to listen on and its associated server socket parameters.
@@ -106,20 +110,7 @@ public interface SocketConfiguration {
         return new Builder();
     }
 
-    /** The {@link io.helidon.webserver.SocketConfiguration} builder class. */
-    final class Builder implements io.helidon.common.Builder<SocketConfiguration> {
-
-        private int port = 0;
-        private InetAddress bindAddress = null;
-        private SSLContext sslContext = null;
-        private final Set<String> enabledSslProtocols = new HashSet<>();
-        private int backlog = 0;
-        private int timeoutMillis = 0;
-        private int receiveBufferSize = 0;
-
-        private Builder() {
-        }
-
+    interface SocketConfigurationBuilder<B extends SocketConfigurationBuilder<B>> {
         /**
          * Configures a server port to listen on with the server socket. If port is
          * {@code 0} then any available ephemeral port will be used.
@@ -127,18 +118,131 @@ public interface SocketConfiguration {
          * @param port the server port of the server socket
          * @return this builder
          */
+        B port(int port);
+
+        /**
+         * Configures local address where the server listens on with the server socket.
+         * If not configured, then listens an all local addresses.
+         *
+         * @param address an address to bind with the server socket
+         * @return this builder
+         * @throws java.lang.NullPointerException in case the bind address is null
+         * @throws io.helidon.config.ConfigException in case the address provided is not a valid host address
+         */
+        default B bindAddress(String address) {
+            try {
+                return bindAddress(InetAddress.getByName(address));
+            } catch (UnknownHostException e) {
+                throw new ConfigException("Illegal value of 'bind-address' configuration key. Expecting host or ip address!", e);
+            }
+        }
+
+        /**
+         * A helper method that just calls {@link #bindAddress(String)}.
+         *
+         * @param address host to listen on
+         * @return this builder
+         */
+        default B host(String address) {
+            return bindAddress(address);
+        }
+
+        /**
+         * Configures local address where the server listens on with the server socket.
+         * If not configured, then listens an all local addresses.
+         *
+         * @param bindAddress an address to bind with the server socket
+         * @return this builder
+         * @throws java.lang.NullPointerException in case the bind address is null
+         */
+        B bindAddress(InetAddress bindAddress);
+        /**
+         * Configures a maximum length of the queue of incoming connections on the server
+         * socket.
+         * <p>
+         * Default value is {@link #DEFAULT_BACKLOG_SIZE}.
+         *
+         * @param backlog a maximum length of the queue of incoming connections
+         * @return this builder
+         */
+        B backlog(int backlog);
+
+        /**
+         * Configures a server socket timeout.
+         *
+         * @param amount an amount of time to configure the timeout, use {@code 0} for infinite timeout
+         * @param unit time unit to use with the configured amount
+         * @return this builder
+         */
+        B timeout(long amount, TimeUnit unit);
+
+        /**
+         * Configures proposed value of the TCP receive window that is advertised to the remote peer on the
+         * server socket.
+         * <p>
+         * If {@code 0} then use implementation default.
+         *
+         * @param receiveBufferSize a buffer size in bytes of the server socket or {@code 0}
+         * @return this builder
+         */
+        B receiveBufferSize(int receiveBufferSize);
+
+        /**
+         * Configures SSL for this socket. When configured, the server enforces SSL
+         * configuration.
+         * If this method is called, any other method except for {@link #tls(java.util.function.Supplier)}¨
+         * and repeated invocation of this method would be ignored.
+         * <p>
+         * If this method is called again, the previous configuration would be ignored.
+         *
+         * @param tlsConfig ssl configuration to use with this socket
+         * @return this builder
+         */
+        B tls(TlsConfig tlsConfig);
+
+        /**
+         * Configures SSL for this socket. When configured, the server enforces SSL
+         * configuration.
+         *
+         * @param tlsConfig supplier ssl configuration to use with this socket
+         * @return this builder
+         */
+        default B tls(Supplier<TlsConfig> tlsConfig) {
+            return tls(tlsConfig.get());
+        }
+    }
+
+    /** The {@link io.helidon.webserver.SocketConfiguration} builder class. */
+    final class Builder implements SocketConfigurationBuilder<Builder>, io.helidon.common.Builder<SocketConfiguration> {
+
+        private final TlsConfig.Builder tlsConfigBuilder = TlsConfig.builder();
+
+        private int port = 0;
+        private InetAddress bindAddress = null;
+        private int backlog = DEFAULT_BACKLOG_SIZE;
+        private int timeoutMillis = 0;
+        private int receiveBufferSize = 0;
+        private TlsConfig tlsConfig;
+
+        private Builder() {
+        }
+
+        @Override
+        public SocketConfiguration build() {
+            if (null == tlsConfig) {
+                tlsConfig = tlsConfigBuilder.build();
+            }
+
+            return new ServerBasicConfig.SocketConfig(this);
+        }
+
+        @Override
         public Builder port(int port) {
             this.port = port;
             return this;
         }
 
-        /**
-         * Configures local address where the server listens on with the server socket.
-         * If {@code null} then listens an all local addresses.
-         *
-         * @param bindAddress an address to bind with the server socket; {@code null} for all local addresses
-         * @return this builder
-         */
+        @Override
         public Builder bindAddress(InetAddress bindAddress) {
             this.bindAddress = bindAddress;
             return this;
@@ -163,7 +267,10 @@ public interface SocketConfiguration {
          *
          * @param timeoutMillis a server socket timeout in milliseconds or {@code 0}
          * @return this builder
+         *
+         * @deprecated since 2.0.0 please use {@link #timeout(long, java.util.concurrent.TimeUnit)} instead
          */
+        @Deprecated
         public Builder timeoutMillis(int timeoutMillis) {
             this.timeoutMillis = timeoutMillis;
             return this;
@@ -178,6 +285,7 @@ public interface SocketConfiguration {
          * @param receiveBufferSize a buffer size in bytes of the server socket or {@code 0}
          * @return this builder
          */
+        @Override
         public Builder receiveBufferSize(int receiveBufferSize) {
             this.receiveBufferSize = receiveBufferSize;
             return this;
@@ -189,9 +297,14 @@ public interface SocketConfiguration {
          *
          * @param sslContext a SSL context to use
          * @return this builder
+         *
+         * @deprecated since 2.0.0, please use {@link #tls(TlsConfig)} instead
          */
+        @Deprecated
         public Builder ssl(SSLContext sslContext) {
-            this.sslContext = sslContext;
+            if (null != sslContext) {
+                this.tlsConfigBuilder.sslContext(sslContext);
+            }
             return this;
         }
 
@@ -202,7 +315,9 @@ public interface SocketConfiguration {
          * @param sslContextBuilder a SSL context builder to use; will be built as a first step of this
          *                          method execution
          * @return this builder
+         * @deprecated since 2.0.0, please use {@link #tls(Supplier)} instead
          */
+        @Deprecated
         public Builder ssl(Supplier<? extends SSLContext> sslContextBuilder) {
             return ssl(sslContextBuilder != null ? sslContextBuilder.get() : null);
         }
@@ -212,9 +327,17 @@ public interface SocketConfiguration {
          * @param protocols protocols to enable, if {@code null} enables the
          * default protocols
          * @return this builder
+         *
+         * @deprecated since 2.0.0, please use {@link io.helidon.webserver.TlsConfig.Builder#enabledProtocols(String...)}
+         *              instead
          */
-        public Builder enabledSSlProtocols(String... protocols){
-            this.enabledSslProtocols.addAll(Arrays.asList(protocols));
+        @Deprecated
+        public Builder enabledSSlProtocols(String... protocols) {
+            if (null == protocols) {
+                enabledSSlProtocols(List.of());
+            } else {
+                enabledSSlProtocols(Arrays.asList(protocols));
+            }
             return this;
         }
 
@@ -224,18 +347,55 @@ public interface SocketConfiguration {
          *  the default protocols
          * @return this builder
          */
-        public Builder enabledSSlProtocols(List<String> protocols){
-            if (protocols != null) {
-                this.enabledSslProtocols.addAll(protocols);
+        @Deprecated
+        public Builder enabledSSlProtocols(List<String> protocols) {
+            if (null == protocols) {
+                this.tlsConfigBuilder.enabledProtocols(List.of());
+            } else {
+                this.tlsConfigBuilder.enabledProtocols(protocols);
             }
             return this;
         }
 
         @Override
-        public SocketConfiguration build() {
-            return new ServerBasicConfig.SocketConfig(port, bindAddress,
-                    sslContext, enabledSslProtocols, backlog, timeoutMillis,
-                    receiveBufferSize);
+        public Builder timeout(long amount, TimeUnit unit) {
+            long timeout = unit.toMillis(amount);
+            if (timeout > Integer.MAX_VALUE) {
+                this.timeoutMillis = 0;
+            } else {
+                this.timeoutMillis = (int) timeout;
+            }
+            return this;
+        }
+
+        @Override
+        public Builder tls(TlsConfig tlsConfig) {
+            this.tlsConfig = tlsConfig;
+            return this;
+        }
+
+        public int port() {
+            return port;
+        }
+
+        Optional<InetAddress> bindAddress() {
+            return Optional.ofNullable(bindAddress);
+        }
+
+        int backlog() {
+            return backlog;
+        }
+
+        int timeoutMillis() {
+            return timeoutMillis;
+        }
+
+        int receiveBufferSize() {
+            return receiveBufferSize;
+        }
+
+        TlsConfig tlsConfig() {
+            return tlsConfig;
         }
     }
 }
